# astc-encoder

./: CMakeLists.txt
Source/: astc_stb_tga.cpp  astc_weight_align.cpp  astcenc.h  astcenccli_image_external.cpp  astcenccli_image_load_store.cpp  cmake_core.cmake  mathlib.cpp  mathlib.h
